<resources>
    <string name="app_name">Tween</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="logo">logo</string>
    <string name="pass">Password</string>
    <string name="email">Email</string>
    <string name="button">button</string>
    <string name="loginhere">Already have an account? <u>Login</u></string>
    <string name="signuphere">Don\'t have an account? <u>Signup here</u></string>
    <string name="tips">Health Tips</string>
    <string name="menuProfile">Profile</string>
    <string name="menuCom">Community</string>
    <string name="menuScore">Score</string>
    <string name="menuHome">Home</string>
    <string name="profilepic">profilePic</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth Date</string>
    <string name="name">Name</string>
    <string name="logout">logout</string>
    <string name="editprofile">editprofile</string>
    <string name="save">Save</string>
</resources>