<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical"
    tools:context=".login">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:gravity="center"
        android:textSize="50sp"
        android:textColor="@color/black" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="130dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="Username"
        android:drawableStart="@drawable/user"
        android:drawablePadding="12dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        android:backgroundTint="@color/black"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="Email"
        android:drawableStart="@drawable/email"
        android:drawablePadding="12dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        android:backgroundTint="@color/black"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="Password"
        android:drawableStart="@drawable/password"
        android:drawablePadding="12dp"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        android:backgroundTint="@color/black"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:autofillHints="Confirm Password"
        android:drawableStart="@drawable/password"
        android:drawablePadding="12dp"
        android:hint="@string/cfmPass"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        android:backgroundTint="@color/black"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/signup"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@null"
        android:contentDescription="@string/button"
        android:minHeight="48dp"
        android:scaleType="fitCenter"
        android:src="@drawable/bluearrow"
        tools:ignore="RedundantDescriptionCheck" />

</LinearLayout>